[package]
name = "icu-sys"
version = "0.0.1"
authors = ["FullContact, Inc"]
license = "MIT/Apache-2.0 + ICU"
readme = "README.md"
build = "build.rs"
repository = "https://github.com/fullcontact/icu-sys"
homepage = "https://github.com/fullcontact/icu-sys"
documentation = "https://fullcontact.github.io/icu-sys/icu_sys/index.html"

description = """
Native bindings to the ICU C API.
"""
keywords = ["icu", "libicu", "i18n", "unicode", "collation",
            "normalization", "normalisation", "folding"]

[dependencies]
libc = "0.2.14"
